--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,14 +9,14 @@ ENDIF ()
 set(TOP_DIR ${CMAKE_CURRENT_SOURCE_DIR})
 set(DUKTAPE_DIR ${TOP_DIR}/duktape-2.4.0)
 
-if (ANDROID OR IOS)
-    set(DUKTAPE_SRC_DIR ${DUKTAPE_DIR}/src-release)
-else ()
-    set(DUKTAPE_SRC_DIR ${DUKTAPE_DIR}/src-debug)
-endif ()
+# if (ANDROID OR IOS)
+#     set(DUKTAPE_SRC_CAT src-release)
+# else ()
+#     set(DUKTAPE_SRC_CAT src-debug)
+# endif ()
 
-include_directories(${DUKTAPE_SRC_DIR})
-aux_source_directory(${DUKTAPE_SRC_DIR} DUKTAPE_SRCS)
+include_directories(${DUKTAPE_DIR}/src-${DUKTAPE_SRC_CAT})
+aux_source_directory(${DUKTAPE_DIR}/src-${DUKTAPE_SRC_CAT} DUKTAPE_SRCS)
 
 #IF(CMAKE_CL_64)
 #    link_directories(${TOP_DIR}/build/librws/x64/Release)
