--- a/unity/.gitignore
+++ b/unity/.gitignore
@@ -8,6 +8,8 @@
 /Assets/Duktape/Generated.meta
 /Assets/AssetStoreTools
 /Assets/AssetStoreTools.meta
+/Assets/Duktape/Examples/Resources
+/Assets/Duktape/Examples/Resources.meta
 
 # AssetBundles/
 /Library/
