--- a/duktape-2.5.0/src-input/duktape.h.in
+++ b/duktape-2.5.0/src-input/duktape.h.in
@@ -1309,7 +1309,7 @@ DUK_EXTERNAL_DECL void duk_module_node_init(duk_context *ctx);
 
 DUK_API_NORETURN(DUK_EXTERNAL_DECL void duk_unity_error_raw(duk_context *ctx, duk_errcode_t err_code, const char *filename, duk_int_t line, const char *fmt));
 
-DUK_EXTERNAL_DECL duk_bool_t duk_unity_get_refid(duk_context *ctx, duk_idx_t idx, duk_int_t *refid);
+DUK_EXTERNAL_DECL duk_int_t duk_unity_get_refid(duk_context *ctx, duk_idx_t idx);
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_set_refid(duk_context *ctx, duk_idx_t idx, duk_int_t refid);
 
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_get_weak_refid(duk_context *ctx, duk_idx_t idx, duk_int_t *refid);
