--- a/duktape-2.5.0/src-input/duktape.h.in
+++ b/duktape-2.5.0/src-input/duktape.h.in
@@ -1318,6 +1318,9 @@ DUK_EXTERNAL_DECL duk_bool_t duk_unity_set_weak_refid(duk_context *ctx, duk_idx_
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_get_type_refid(duk_context *ctx, duk_idx_t idx, duk_uint_t *refid);
 DUK_EXTERNAL_DECL duk_bool_t duk_unity_set_type_refid(duk_context *ctx, duk_idx_t idx, duk_uint_t refid);
 
+DUK_EXTERNAL_DECL duk_ret_t duk_unity_thread_resume(duk_context *ctx);
+DUK_EXTERNAL_DECL duk_int_t duk_unity_thread_state(duk_context *ctx);
+
 DUK_EXTERNAL_DECL const char *duk_unity_get_lstring(duk_context *ctx, duk_idx_t idx, duk_uint_t *out_len);
 
 DUK_EXTERNAL_DECL duk_int_t duk_unity_compile_raw(duk_context *ctx, const char *src_buffer, duk_uint_t src_length, duk_uint_t flags);
