--- a/duktape-2.5.0/src-input/duktape.h.in
+++ b/duktape-2.5.0/src-input/duktape.h.in
@@ -1410,6 +1410,8 @@ DUK_EXTERNAL_DECL void duk_unity_push_buffer_object(duk_context *ctx, duk_idx_t 
 
 DUK_EXTERNAL_DECL duk_idx_t duk_unity_push_error_object_raw(duk_context *ctx, duk_errcode_t err_code, const char *filename, duk_int_t line, const char *fmt);
 
+DUK_EXTERNAL_DECL duk_idx_t duk_unity_push_safe_function(duk_context *ctx, duk_c_function func, duk_idx_t nargs);
+
 // DUK_EXTERNAL_DECL void duk_unity_suspend(duk_context *ctx);
 // DUK_EXTERNAL_DECL void duk_unity_resume(duk_context *ctx);
 
