--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ set(LIBFIXMATH_DIR ${TOP_DIR}/thirdparty/libfixmath)
 set(MBEDTLS_DIR ${TOP_DIR}/thirdparty/mbedtls)
 set(ZLIB_DIR ${TOP_DIR}/thirdparty/zlib)
 set(KCP_DIR ${TOP_DIR}/thirdparty/kcp)
+set(TLSF_DIR ${TOP_DIR}/thirdparty/tlsf)
 
 include_directories(${LIBFIXMATH_DIR})
 aux_source_directory(${LIBFIXMATH_DIR} LIBFIXMATH_SRCS)
@@ -53,6 +54,9 @@ set(ZLIB_SRCS
 
 include_directories(${KCP_DIR})
 set(KCP_SRCS ${KCP_DIR}/ikcp.c)
+
+include_directories(${TLSF_DIR})
+set(TLSF_SRCS ${TLSF_DIR}/tlsf.c)
 
 include_directories(${LIBWEBSOCKETS_DIR})
 include_directories(${LIBWEBSOCKETS_DIR}/win32helpers)
@@ -144,19 +148,19 @@ ENDIF ()
 
 if (APPLE) 
     if (IOS)
-        add_library(duktape STATIC ${DUKTAPE_SRCS} ${LIBFIXMATH_SRCS} ${MBEDTLS_SRCS} ${LIBWEBSOCKETS_SRCS} ${ZLIB_SRCS} ${KCP_SRCS})
+        add_library(duktape STATIC ${DUKTAPE_SRCS} ${LIBFIXMATH_SRCS} ${MBEDTLS_SRCS} ${LIBWEBSOCKETS_SRCS} ${ZLIB_SRCS} ${KCP_SRCS} ${TLSF_SRCS})
         set(CMAKE_OSX_ARCHITECTURES "$(ARCHS_STANDARD)")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fembed-bitcode")
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fembed-bitcode")
 		set_xcode_property (duktape IPHONEOS_DEPLOYMENT_TARGET "7.0" "all")
     else ()
-        add_library(duktape MODULE ${DUKTAPE_SRCS} ${LIBFIXMATH_SRCS} ${MBEDTLS_SRCS} ${LIBWEBSOCKETS_SRCS} ${ZLIB_SRCS} ${KCP_SRCS})
+        add_library(duktape MODULE ${DUKTAPE_SRCS} ${LIBFIXMATH_SRCS} ${MBEDTLS_SRCS} ${LIBWEBSOCKETS_SRCS} ${ZLIB_SRCS} ${KCP_SRCS} ${TLSF_SRCS})
         set(CMAKE_OSX_ARCHITECTURES "$(ARCHS_STANDARD_64_BIT)")
         set_target_properties(duktape PROPERTIES MACOSX_BUNDLE TRUE)
         set_target_properties(duktape PROPERTIES BUNDLE TRUE)
     endif ()
 else ()
-    add_library(duktape SHARED ${DUKTAPE_SRCS} ${LIBFIXMATH_SRCS} ${MBEDTLS_SRCS} ${LIBWEBSOCKETS_SRCS} ${ZLIB_SRCS} ${KCP_SRCS})
+    add_library(duktape SHARED ${DUKTAPE_SRCS} ${LIBFIXMATH_SRCS} ${MBEDTLS_SRCS} ${LIBWEBSOCKETS_SRCS} ${ZLIB_SRCS} ${KCP_SRCS} ${TLSF_SRCS})
 endif ()
 
 #target_link_libraries(duktape librws_static.lib)
