--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ before_install:
   - pip install pyyaml
 script:
   - chmod +x ./configure_duktape.sh
+  - chmod +x ./make_duktape_linux.sh
   - ./configure_duktape.sh
   - ./make_duktape_linux.sh
-  
-
